<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="android.example.bobo.ui.viewmodel.RegisterStoreViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:paddingHorizontal="20dp"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp">

            <LinearLayout
                android:id="@+id/back_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="Back"
                    android:padding="8dp"
                    android:src="@drawable/ic_arrow_left" />

                <TextView
                    android:id="@+id/tx_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingStart="4dp"
                    android:text="Back"
                    android:textColor="@color/color_typography_heading"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/img_Logo"
                android:layout_width="309dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="35dp"
                android:baselineAligned="false"
                app:srcCompat="@drawable/ic_logo" />
        </RelativeLayout>

        <TextView
            android:layout_width="291dp"
            android:layout_height="82dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/register"
            android:textColor="@color/color_typography_heading"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="74dp"
            android:layout_marginVertical="74dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_store_review" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/text_title"
            android:fontFamily="@font/poppins_medium"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="175dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/btb_register"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:enabled="true"
            android:onClick="@{() -> viewModel.onRegisterClick()}" />
    </LinearLayout>
</layout>