<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="android.example.bobo.ui.viewmodel.RegisterStoreViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:paddingHorizontal="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp">

            <LinearLayout
                android:id="@+id/back_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:contentDescription="Back"
                    android:padding="8dp"
                    android:src="@drawable/ic_arrow_left" />

                <TextView
                    android:id="@+id/tx_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingStart="4dp"
                    android:text="Back"
                    android:textColor="@color/color_typography_heading"
                    android:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/img_Logo"
                android:layout_width="309dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="35dp"
                android:baselineAligned="false"
                app:srcCompat="@drawable/ic_logo" />
        </RelativeLayout>


        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="74dp"
            android:layout_marginTop="74dp"
            android:src="@drawable/ic_finish_register" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:textColor="@color/color_typography_heading"
            android:text="@string/text_title_finish"
            android:textSize="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/text_title_finish_02"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_complete_finish"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="160dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/btn_complete"
            android:textColor="@color/white"
            android:textSize="15sp" />
        <!--            android:onClick="@{() -> viewModel.onRegisterClick()}"-->

    </LinearLayout>
</layout>